fixed the cursor pointer issue on mobile

--- a/style.css
+++ b/style.css
@@ -63,9 +63,14 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    cursor: pointer;
     font-weight: 600;
     gap: 1rem;
+}
+
+@media screen and (width > 27rem) {
+    .accordion-header {
+        cursor: pointer;
+    }
 }
 
 .header-label {
